# PyCrop2ML

./: .gitignore  pyproject.toml
src/pycropml/: cyml.py  main.py  topology.py
src/pycropml/transpiler/: Parser.py  ast_transform.py  interface.py
src/pycropml/transpiler/generators/: checkGenerator.py  cpp2Generator.py
