[project]
authors = [{name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de"}]
dependencies = []
name = "PyCrop2ML"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "openalea3"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
pycrop2ml = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.10,<0.0.11"
antlr4-python3-runtime = "==4.8"
cython = ">=3.2.4,<4"
numpy = "==2.0.2"
pandas = "==2.2.3"
path = ">=17.1.1,<18"
six = ">=1.17.0,<2"
nbformat = ">=5.10.4,<6"
nbsphinx = ">=0.9.8,<0.10"
networkx = ">=3.6.1,<4"
graphviz = ">=14.1.0,<15"
pydot = ">=4.0.1,<5"
pyyaml = ">=6.0.3,<7"
unyt = ">=3.0.4,<4"
ipython = ">=9.9.0,<10"
xmlformatter = ">=0.2.8,<0.3"
"openalea.core" = ">=2.5.0,<3"
